# C-MIPS-Compiler

./: .gitignore  README.md  Vagrantfile  makefile
Compiler/: CMakeLists.txt  c_tmp  lexer_trash.txt  makefile  quick_test.sh  testbench.sh  tmpTEST.c  tmpTEST_driver.c
Compiler/include/: helpers.h  list.h  mips.h  node.h  primitives.h  standard_list.h  topLevel.h
Compiler/include/Context/: bindings.h
Compiler/include/Declaration/: declaration.h  declarators.h  init_declarator.h  type_specifiers.h
Compiler/include/Declarations/: type_specifiers.h  var_declarator.h
Compiler/include/Declerations/: declaration.h
Compiler/include/Expressions/: arithmetic_operation.h  assignment.h  basic.h  bitwise_operation.h  bool_operation.h  operation.h  unary_operation.h
Compiler/include/Function/: fn_call.h  fn_declarator.h  fn_definition.h  fn_parameter.h
Compiler/include/Operations/: BinaryOperations.h  binary.h
Compiler/include/Statements/: compound.h  conditional.h  expression.h  for.h  if_else.h  iteration.h  jump.h  selection.h  switch.h  while.h
Compiler/src/: CMakeLists.txt  parser.tab.cpp  parser.tab.hpp
Compiler/src/Context/: bindings.cpp  memory.cpp
Compiler/src/Declarations/: declarators.cpp  init_declarator.cpp
Compiler/src/Expressions/: bool_operation.cpp  unary_operation.cpp
Compiler/src/Function/: fn_call.cpp  fn_declarator.cpp  fn_definition.cpp
Compiler/src/Statements/: compound.cpp  conditional.cpp  for.cpp  if_else.cpp  jump.cpp  selection.cpp  switch.cpp  while.cpp
Translator/: CMakeLists.txt  custommake  iftest.c  make_all.sh  makefile  oldmakefile  output.py  quickmake.sh  testbench.sh
Translator/include/: AST.h  ASTnode.h  ast.hpp  expression.h  function.h  helpers.h  list.h  node.h  operator.h  primitive.h  primitives.h  statements.h  unary.h  variable.h
Translator/results/: f00  f00.py  f01.py  f02  f02.py  f03.py  f04.py  f05  f05.py  f06.py  f07  f07.py  f08.py  f10  f11  f11.py  f14  f17  f18.py  f19.py  f20  f20.py  f21  f21.py  f22.py  f23.py  f24  f24.py  f25  f25.py  f26.py  f27.py  f28  f29.py
Translator/src/: CMakeLists.txt  helpers.cpp  lexer.flex  lexer.yy.cpp  main.cpp  makefile  parser.y  print_canonical.cpp
Translator/tmp/: f04  f08  f15  f22  f27
Translator/tmp/formative/: f03  f23
compiler/: c_compiler_formative.sh  makefile2  makefile3  out  tmpTEST
compiler/inc/: ast.hpp  context.hpp
compiler/inc/ast/: ast_data_type.hpp  ast_expression.hpp  ast_function.hpp  ast_node.hpp  ast_variable_bindings.hpp
compiler/include/Expressions/: assignment_expression.h  basic.h  binary_operation.h  boolean_operation.h  primitives.h
compiler/src/: lexer.flex  main.cpp  mips.cpp  parser.y  standard_list.cpp  topLevel.cpp
oldCompiler/inc/: context.hpp
(+4 files in other folders)
